# SwiftRustBench

./: .gitignore  README.md  rust.temp  swift.temp  temp_solution  temp_solution_2
Fasta/Swift/: Benchmark_String.swift  Package.swift
RustModules/common_api/: Cargo.toml
RustModules/common_api/src/: lib.rs
SwiftModules/: Package.swift
SwiftModules/Sources/CommonAPI/: Measure.swift  TimeUtils.swift
SwiftModules/Sources/WindowsBridge/: timeval.c
Tree/Rust/benchmark/: Cargo.toml
benchs/count_square/dynamic_programming/Rust/benchmark/: Cargo.toml
benchs/count_square/dynamic_programming/Rust/benchmark/src/: main.rs
benchs/maximum_width_ramp/Swift/: Package.swift
benchs/min_num_swaps/Swift/: Package.swift
benchs/number_chair/Swift/: Package.swift
benchs/parentheseses/Swift/: Package.swift
divide_groups/: n^2_solution
maximum_width_ramp/Swift/: Package.swift
number_chair/Swift/: Package.swift
parentheseses/Rust/benchmark/: Cargo.toml
parentheseses/Swift/: Package.swift
results/: Darwin_apple_m2_pro.md  Darwin_intel(r)_core(tm)_i5-5287u_cpu_@_2.90ghz.md  Darwin_intel(r)_core(tm)_i5-8500_cpu_@_3.00ghz.md  Linux_intel(r)_core(tm)_i5-6600_cpu_@_3.30ghz.md  Windows_intel(r)_core(tm)_i5-6600_cpu_@_3.30ghz.md  apple_m2_pro  apple_m2_pro.md  intel(r)_core(tm)_i5-6600_cpu_@_3.30ghz.md  intel(r)_core(tm)_i5-8500_cpu_@_3.00ghz.md
scripts/: run_measure.py
the_number_of_the_smallest_unoccupied_hair/Rust/benchmark/: Cargo.toml
the_number_of_the_smallest_unoccupied_hair/Rust/benchmark/src/: main.rs  sample2.txt  sample3.txt
(+68 files in other folders)
