[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
static-rc = "0.6.1"
serde_json = "1.0.128"
serde = { version="1.0.210", features=["derive"] }

[dependencies.common_api]
path = "../../../../../RustModules/common_api"